@@ -57,6 +57,8 @@ Bug fixes since 2.3
 
 - Better Javadoc for DateTimeComparator [#73]
 
+- Fix the links to the IANA time zone database [#83]
+
 
 Scala
 --------
